--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,13 @@
 <resources>
+
+    <!-- 默认按钮的圆角大小 -->
+    <dimen name="button_round_size">5dp</dimen>
+
+    <!-- 默认分割线的宽度或者高度 -->
+    <dimen name="line_size">1px</dimen>
+
+
+
     <dimen name="space_2">1dp</dimen>
     <dimen name="space_4">2dp</dimen>
     <dimen name="space_6">3dp</dimen>
