--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -3,15 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/et_home"
+    <TextView
+        android:id="@+id/tv"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
+        android:text="Fragment4"
         android:gravity="center"
-        android:hint="请输入手机号"
        />
-
-
 
 </RelativeLayout>
