--- a/app/src/main/res/layout/view_title.xml
+++ b/app/src/main/res/layout/view_title.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
     android:id="@+id/ll_title_root"
-    android:layout_height="40dp">
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/ll_title_left"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_weight="1"
-        android:paddingLeft="@dimen/space_30"
-        >
+        android:paddingLeft="@dimen/space_30">
 
         <ImageView
             android:id="@+id/iv_title_left"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_back" />
+            android:layout_centerVertical="true" />
 
         <TextView
             android:id="@+id/tv_title_left"
@@ -49,11 +47,10 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingRight="@dimen/space_30"
-        android:layout_weight="1"
-        >
+        android:paddingRight="@dimen/space_30">
 
         <TextView
             android:id="@+id/tv_title_right"
@@ -67,8 +64,7 @@
             android:id="@+id/iv_title_right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true" />
     </LinearLayout>
 
 </LinearLayout>
